--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,7 +9,7 @@
   <link rel="manifest" href="./app.webmanifest">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="icon" href="./favicon.png">
- 
+  <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
   <title>Movie Catalogue</title>
 </head>
 <body>
